fix: 🐛 remove ::-webkit-scrollbar

--- a/resources/skins.citizen.styles/common/scrollbar.less
+++ b/resources/skins.citizen.styles/common/scrollbar.less
@@ -6,11 +6,6 @@
 		scrollbar-width: thin;
 	}
 
-	::-webkit-scrollbar {
-		width: 10px;
-		height: 10px;
-	}
-
 	::-webkit-scrollbar-track {
 		background: transparent;
 		transition: @transition-background;
